--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,12 @@ body {
   top: 70px;
   height: 50px; }
 
+.page {
+    display: block;
+  margin: 45px 0 0 200px;
+    padding: 0;
+}
+
 .star-orange {
   display: block;
   color: #ffab00;
